# 74SimSource

./: .gitignore  README.md  bug-report.html  chips.html  docs.html  download.html  feedback.html  index.html  linkable-terms.json  package-lock.json  package.json  privacy.html  request-change.html  simulator.html  submit-example.html  test-simulator.mjs  test.mjs  updates.json
css/: admin.css  admininside.css  bug-report.css  chips-page.css  docs.css  download.css  feedback.css  landing.css  onramp-intro.css  onramp-lessons.css  onramp.css  report-form.css  style.css  submit-example.css  tokens.css
helperscripts/: chip_docs.json  claudChipAdder  claudChipImprover  diagram-gallery.mjs  diagram-lint.mjs  dump_chip_docs.py  fixFormatting.py  fixFormtting2Lite.py  generate_ben_eater_cpu.py  i18n-check.mjs  i18n-extract.mjs  inject_links.py  linkable-terms.json  write_chip_docs.py
js/: breadboard.js  bug-report.js  chips.js  components.js  constants.js  docs-page.js  docs-tabs.js  download.js  examples.js  feedback.js  i18n.js  imagebox.js  interaction.js  landing-desktop.js  landing.js  logic.js  main.js  netlist.js  onramp-beneater-boards.js  onramp-courses.js  onramp-diagrams.js  onramp-hints.js  onramp-lesson-boards.js  onramp-lessons-beneater.js  onramp-lessons-page.js  onramp-lessons.js  onramp.js  renderer.js  request-change.js  simulator.js  specificChipsSim.js  storage.js  submit-example.js  textbox.js  timer555.js  timing.js  timingDiagram.js  updateLog.js  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+550 files in other folders)
