[package]
name = "sim74"
version = "1.0.0"
edition = "2021"
description = "74SIM desktop"
authors = ["Dean Kuruzovich"]

[lib]
name = "sim74_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
